--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "concept-test",
   "version": "0.0.0",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
